templates/wp-gats-helm_template.yaml
---
# Source: wp-gats-helm/templates/wgnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: wgnet
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/wgnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/wgnet: "true"
---
# Source: wp-gats-helm/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  type: NodePort
  ports:
  - name: "8000"
    port: 8000
    targetPort: 80
    nodePort: 31256
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
---
# Source: wp-gats-helm/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - port: 3306
  selector:
      io.kompose.service: db
---
# Source: wp-gats-helm/templates/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  type: NodePort
  ports:
  - name: "8008"
    port: 8008
    targetPort: 80
    nodePort: 31255
  selector:
    io.kompose.service: wordpress
status:
  loadBalancer: {}
---
# Source: wp-gats-helm/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/wgnet: "true"
        io.kompose.service: app
    spec:
      containers:
      - image: gats
        imagePullPolicy: "IfNotPresent"
        name: app
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
# Source: wp-gats-helm/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/wgnet: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: wordpress
        - name: MYSQL_PASSWORD
          value: Nettantra@db
        - name: MYSQL_ROOT_PASSWORD
          value: Nettantra@1234
        - name: MYSQL_USER
          value: wordpress
        image: mysql
        imagePullPolicy: "IfNotPresent"
        name: db
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
# Source: wp-gats-helm/templates/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/wgnet: "true"
        io.kompose.service: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: db:3306
        - name: WORDPRESS_DB_PASSWORD
          value: Nettantra@db
        - name: WORDPRESS_DB_USER
          value: wordpress
        image: wordpress:6.0.0-php8.0-apache
        imagePullPolicy: "IfNotPresent"
        name: wordpress
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
